# addon-FLOps

./: .gitignore  README.md  setup.cfg  testing-alex.py  whitelist.txt
data_manager_package/: Dockerfile  pyproject.toml
data_manager_package/data_manager/: main.py
data_manager_package/data_manager/api/: main.py
data_manager_package/data_manager/api/blueprints/: binaries.py
data_manager_sidecar_package/: Dockerfile  pyproject.toml
data_manager_sidecar_package/data_manager_sidecar/: main.py
data_manager_sidecar_package/data_manager_sidecar/api/: main.py
data_manager_sidecar_package/data_manager_sidecar/api/blueprints/: binaries.py
data_manager_sidecar_package/data_manager_sidecar/server/: main.py
docker/: flops_management.docker_compose.yml  (+1 more)
flops_manager_package/: Dockerfile  pyproject.toml
flops_manager_package/flops_manager/: fl_management.py  flops_management.py  image_management.py  main.py  manage_fl.py  manage_flops.py  ml_repo_management.py  registry_management.py
flops_manager_package/flops_manager/api/: app_management.py  cluster_management.py  main.py  service_management.py
flops_manager_package/flops_manager/api/blueprints/: __init__.py  common.py  database.py  flops_services.py  mock_data_provider.py  projects.py  tracking.py
flops_manager_package/flops_manager/api/request_management/: custom_http.py  custom_requests.py
flops_manager_package/flops_manager/api/utils/: auxiliary.py  consts.py  login.py
flops_manager_package/flops_manager/classes/: application.py  base copy.py  base.py  ml_repo.py  observatory.py  project.py  project_based.py
flops_manager_package/flops_manager/classes/apps/: app_base.py  customer_facing_base.py  helper.py  observatory.py  project.py
flops_manager_package/flops_manager/classes/apps/observatory/: main.py  management.py
flops_manager_package/flops_manager/classes/deployables/: base.py  ui.py
flops_manager_package/flops_manager/classes/deployables/project_services/: base.py  learners.py
flops_manager_package/flops_manager/classes/deployables/project_services/aggregator/: main.py  termination.py
flops_manager_package/flops_manager/classes/deployables/project_services/builder/: main.py  termination.py
flops_manager_package/flops_manager/classes/oak/: base.py  observatory.py  project.py  project_based.py
flops_manager_package/flops_manager/classes/oak/deployables/: base.py  project_based.py  ui.py
flops_manager_package/flops_manager/classes/oak/deployables/project_services/: base.py  learners.py
flops_manager_package/flops_manager/classes/oak/deployables/project_services/aggregator/: main.py  termination.py
flops_manager_package/flops_manager/classes/services/: project_observer.py  service_base.py
flops_manager_package/flops_manager/classes/services/helper/: mock_data_provider.py  trained_model.py
flops_manager_package/flops_manager/classes/services/observatory/: project_observer.py  tracking_server.py
flops_manager_package/flops_manager/classes/services/observatory/tracking_server/: main.py  management.py
flops_manager_package/flops_manager/classes/services/project/: learners.py  project_service.py
flops_manager_package/flops_manager/classes/services/project/aggregator/: main.py  termination.py
flops_manager_package/flops_manager/classes/services/project/aggregators/: auxiliary.py  classic_aggregator.py  cluster_aggregator.py  main.py  root_aggregator.py  termination.py
flops_manager_package/flops_manager/classes/services/project/builder/: base_builder.py  main.py  termination.py
flops_manager_package/flops_manager/classes/services/project/builders/: base_builder.py  fl_actors_builder.py  termination.py  trained_model_builder.py
flops_manager_package/flops_manager/classes/services/project/learners/: main.py  termination.py
flops_manager_package/flops_manager/database/: common.py  main.py
flops_manager_package/flops_manager/flops_management/: flops_projects.py  mock_data_providers.py  training.py
flops_manager_package/flops_manager/flops_management/post_training_steps/: build_trained_model_image.py  trained_model_image_deployment.py
flops_manager_package/flops_manager/image_management/: common.py  fl_actor_images.py  trained_model_images.py
flops_manager_package/flops_manager/image_registry_management/: common.py  main.py
flops_manager_package/flops_manager/mlflow/: tracking_server.py
flops_manager_package/flops_manager/mlflow/storages/: artifact_store.py  backend_store.py  backend_stores.py  common.py  main.py
flops_manager_package/flops_manager/mqtt/: constants.py  listener.py  main.py  sender.py
flops_manager_package/flops_manager/utils/: common.py  constants.py  env_vars.py  types.py
flops_manager_package/flops_manager/utils/exceptions/: main.py  types.py
flops_manager_package/flops_manager/utils/sla/: components.py  generator.py
flops_manager_package/mlruns/0/: meta.yaml
ml_data_server_package/: Dockerfile  pyproject.toml
ml_data_server_package/ml_data_server/: flight_server.py  main.py
ml_data_server_package/ml_data_server/api/blueprints/: binaries.py
ml_data_server_package/ml_data_server/flight_server/: main.py
mock_data_provider_package/: Dockerfile  pyproject.toml
mock_data_provider_package/mock_data_provider/: context.py  data_loader.py  data_sender.py  main.py
mock_data_provider_package/mock_data_provider/utils/: arg_parsing.py  env_vars.py  hash.py
package/: Dockerfile  (+2 more)
project_observer_package/: Dockerfile  README.md  pyproject.toml
project_observer_package/project_observer/: main.py  oak_service_communication.py  ui_context.py
project_observer_package/project_observer/mqtt/: main.py
project_observer_package/project_observer/utils/: arg_parsing.py
trained_model_image_inference_testers/mnist_sklearn/: Dockerfile  pyproject.toml
trained_model_image_inference_testers/mnist_sklearn/inference_tester/: main.py
ui_package/: Dockerfile  README.md  pyproject.toml
ui_package/flops_ui/: main.py  oak_service_communication.py  ui_context.py
ui_package/flops_ui/mqtt/: main.py
ui_package/flops_ui/utils/: arg_parsing.py
(+390 files in other folders)
