[tool.poetry]
name = "data_manager_sidecar"
version = "0.1.0"
description = "The Data Manager Sidecar on a FL enabled Worker Node"
authors = ["Alexander Malyuk <malyuk.alexander1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-openapi3 = "^3.0.2"
requests = "^2.28.1"
waitress = "3.0.0"
icecream = "^2.1.3"
flops-utils = "^0.4.7"
netaddr = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "data_manager_sidecar.main:main"

[tool.black]
line-length = 100
