[tool.poetry]
name = "ml_data_server"
version = "0.1.0"
description = "The ML Data Server of an FL enabled Worker Node intended for learning"
authors = ["Alexander Malyuk <malyuk.alexander1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-openapi3 = "^3.0.2"
requests = "^2.28.1"
waitress = "3.0.0"
icecream = "^2.1.3"
netaddr = "^1.2.1"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "ml_data_server.main:main"

[tool.black]
line-length = 100
