[tool.poetry]
name = "mock_data_provider"
version = "0.1.0"
description = "A Mock Data Provider for Developing/Testing the FLOps Data Manager"
authors = ["Alexander Malyuk <malyuk.alexander1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
icecream = "^2.1.3"
flops-utils = "^0.4.4"
flwr_datasets = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "mock_data_provider.main:main"

[tool.black]
line-length = 100
