[tool.poetry]
name = "mock_data_provider"
version = "0.1.0"
description = "A Mock Data Provider for Developing/Testing the FLOps Data Manager"
authors = ["Alexander Malyuk <malyuk.alexander1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
icecream = "^2.1.3"
# NOTE:
# The 'datasets' library is "included" in the flwr_datasets library.
# We still specify it explicitly to avoid a current flwr bug.
# Since (HuggingFace's) Datasets version 2.20.0 they added a mandatory "trust_remote_code" flag
# into their dataset loading function.
# This function gets used by flwr_datasets - but withouth specifying this mandatory flag.
# flwr_datasets currently does not have a flag of its own to set this trust flag.
# The result is that many (even 'mnist') cannot be loaded without errors.
# To overcome this bug we explicitly use an older version of datasets.
datasets = "2.16.0"
flwr_datasets = "^0.2.0"
pydantic = "^2.6.4"
pillow = "^10.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "mock_data_provider.main:main"

[tool.black]
line-length = 100
