[tool.poetry]
name = "project_observer"
version = "1.0.0"
description = "A Project Observer service collects user-intended events and messages in a read-only way based on a specific FLOps project."
authors = ["Alexander Malyuk <malyuk.alexander1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "2.0"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "project_observer.main:main"

[tool.black]
line-length = 100
