[tool.poetry]
name = "flops_ui"
version = "1.0.0"
description = "The User Interface for the FLOps plugin of Oakestra"
authors = ["Alexander Malyuk <malyuk.alexander1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "2.0"
icecream = "^2.1.3"
flops-utils = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
oak = "flops_ui.main:main"

[tool.black]
line-length = 100
