[tool.poetry]
name = "inference_tester"
version = "1.0.0"
description = "Inference Test for Sklearn MNIST"
authors = ["Alexander Malyuk <malyuk.alexander1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
icecream = "^2.1.3"
numpy = "^1.26.4"
pandas = "^2.2.1"
requests = "^2.27.1"
datasets = "^2.18.0"
pillow = "^10.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "inference_tester.main:main"
